2006-06-08  Carlos Garcia Campos  <carlosgc@gnome.org>

	** Fixes bug #343764
	* e-table-header-utils.c: (e_table_header_draw_button): 
	Ensure g_label points to the right widget before accessing to its
	style.

2006-06-05  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	* Makefile.am: Remove extra tabs. Fixes #343734.

2006-05-12  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	** Fixes bug #341530.
	* e-table.h:
	Removed duplicate delcaration of e_table_commi_click_to_add.

2006-04-10  Jeff Cai <jeff.cai@sun.com>

	** Fixes bug #327035
	* e-table-header-item.c: (ethi_event):
	Grab focus only from widgets which can have focus on.

2006-03-02  Srinivasa Ragavan  <sragavan@novell.com>

	** Fixes bug #328283

	* e-table-item.c: (eti_tree_unfreeze): Use the right widget to
	unfreeze the tree.

2006-03-01  Simon Zheng  <simon.zheng@sun.com>

	** Fixes bug #331400

	* e-cell-text.c: (ect_print_height): Table item height is decided 
	by the max cell height in item. And cell-text is just one of cells.
	As done by ect_print(), to leave some margin for text, 2 for footer,
	2 for header, actual print height should be 16 + 4. 

2006-02-24  Srinivasa Ragavan  <sragavan@novell.com>

	** Fixes bug #332408
	
	* e-table-config.c: (e_table_proxy_etable_shown_new),
	(e_table_proxy_etable_available_new): Reverting the patch that fixes
	some compiler warning. The function is referred from the glade file,
	which was removed.

2006-02-14  Srinivasa Ragavan  <sragavan@novell.com>

	** Fixes bug #328283

	* e-table-item.c: (eti_tree_unfreeze): Added the return value for 
	scroll-event handler which causes a crash

2006-01-27  Andre Klapper <a9016009@gmx.de>
	* e-table-config-no-group.glade:
	* e-table-config.glade:
	removed string "dialog1" from translation. Fixes bug 306118.

2006-01-13  Srinivasa Ragavan  <sragavan@novell.com>

	* e-table-item.c: (adjustment_changed), (eti_tree_unfreeze),
	(eti_realize): Fixes the scroll issue with e-tree.

2005-12-21  Chenthill Palanisamy  <pchenthill@novell.com>
